--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  /* padding: 1rem 2rem; */
 }
 
 .navbar ul {
@@ -12,7 +12,7 @@
 }
 
 .navbar li a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -25,13 +25,8 @@
   position: relative;
   left: -69px;
   z-index: 2;
-  opacity: 0;
   transition: opacity 0.3s;
   cursor: pointer;
-}
-
-#main-logo-text:hover {
-  opacity: 1;
 }
 
 .logo-container {
@@ -53,6 +48,7 @@
   width: 100%;
   transform: scaleX(0);
   height: 2px;
+  top: 25px;
   bottom: 0;
   left: 0;
   background-color: #BE9A60;
