--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,17 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100vh;
+  /* height: 100vh; */
   /* opacity: 0.5; */
+}
+
+video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  height: 120vh;
+  z-index: -1;
+  opacity: 0.9;
 }
