--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   /* this makes the box not include extra size when adding "padding" */
   box-sizing: border-box; 
-  font-family: EB Garamond;
+  /* font-family: 'Amiri', serif; */
 }
 
 .padding {
@@ -24,7 +24,14 @@ video {
   bottom: 0;
   min-width: 100%; 
   min-height: 100%;
-  height: 120vh;
   z-index: -1;
-  opacity: 0.9;
+  /* opacity: 0.9; */
+  /* object-fit: cover; */
+}
+
+@media only screen and (max-width: 1080px){
+	/* shift video to the right  */
+  video {
+    right: -280px;
+  }
 }
