--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -66,3 +66,17 @@
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+
+.hamburger-react {
+  display: none !important;
+}
+
+@media only screen and (max-width: 1180px){
+  .hamburger-react {
+    display: block !important;
+  }
+  .navbar li {
+    display: none;
+  }
+}
