our people done

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -18,6 +18,13 @@
   font-weight: 900;
 }
 
+.navbar-white {
+  background-color: white;
+}
+.navbar-white li a {
+  color: black;
+}
+
 #main-logo {
   height: 2.6875rem;
 }
