--- a/src/components/client_reporting/ClientReporting.css
+++ b/src/components/client_reporting/ClientReporting.css
@@ -9,8 +9,9 @@
 .client-container img {
   position: absolute;
   z-index: -1;
-  width: 100%;
+  /* width: 100%; */
   height: 50%;
+  right: 3rem;
   opacity: 0.3;
   object-fit: scale-down;
 }
