--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -22,7 +22,7 @@
 }
 
 .contact-info div{
-  font-size: 1.25rem;
+  font-size:  var(--font-size);
 }
 
 .contact-info a {
@@ -31,11 +31,11 @@
 }
 
 .contact-header {
-  color: #be9a60f8;
-  font-size: 1.5rem !important;
+  color:  var(--main-color);
+  font-size:  var(--font-size) !important;
   cursor: pointer;
 }
 
 .contact-long-text {
-  font-size: 1.25rem;
+  font-size:  var(--font-size);
 }
