--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,10 +12,12 @@
 }
 
 .navbar li a {
-  color: white;
-  /* color: black; */
+  color: #fefefe;
+  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
-  font-weight: 900;
+  font-weight:  calc(var(--font-weight) + 300);
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgba(0, 0, 0, 0.227);
 }
 
 .navbar-white {
@@ -98,7 +100,7 @@
     backface-visibility: hidden;
   }
   .small-screen-dark {
-    background-color: #be9a60f8;
+    background-color:  var(--main-color);
   }
 }
 
