home page css almost done

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -17,6 +17,10 @@
   color: white;
 }
 
+.home-container {
+  transition: all 1s ease-out;
+}
+
 .home-container p {
   font-size:  calc(var(--font-size) + 0.5rem);
   font-weight:  var(--font-weight);
@@ -53,5 +57,20 @@
   #line-gb-img {
     /* right: -30px; */
     top: -200px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  #differentiated-text {
+    font-size:  calc(var(--font-size) + 1.5rem);
+  }
+  #line-gb-img {
+    /* right: -30px; */
+    top: -200px;
+  }
+}
+@media only screen and (min-width: 1500px) {
+  #differentiated-text {
+    font-size:  calc(var(--font-size) + 2.5rem);
   }
 }
