--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -39,3 +39,21 @@
 .contact-long-text {
   font-size:  var(--font-size);
 }
+
+@media only screen and (max-width: 820px) {
+  .contact-container {
+    flex-direction: column;
+  }
+  .contact-location-container {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1160px) {
+  .contact-container {
+    height: 65vh;
+  }
+  .contact-container iframe {
+    height: 65vh;
+  }
+}
