underline brown navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -63,6 +63,21 @@
   transition: transform 0.25s ease-out;
 }
 
+.underline-dark::after {
+  content: "";
+  position: absolute;
+  border: 1px solid var(--main-color) ;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  top: 25px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--main-color);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
 .hover-underline-animation:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
