--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -91,6 +91,21 @@
   display: block !important;
 }
 
+@media only screen and (max-width: 400px) {
+  
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+  }
+
+  .navbar ul {
+    position: absolute;
+    top: 16rem;
+  }
+}
+
 @media only screen and (max-width: 1180px) {
   .hamburger-react {
     display: block !important;
