--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -85,6 +85,7 @@
 
 .hamburger-react {
   display: none !important;
+  z-index: 5!important;
 }
 
 .show-menu {
@@ -120,13 +121,14 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
-    background-color: #be9a6082;
+    background-color: #226092;
     width: 100%;
     padding: 1rem;
+    min-height: 100%;
     animation-name: moveInLeftMenu;
     animation-duration: 2s;
     animation-timing-function: ease-out;
@@ -134,6 +136,9 @@
   }
   .small-screen-dark {
     background-color:  var(--main-color);
+  }
+  .navbar ul {
+    margin: 0;
   }
 }
 
