--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,9 +13,9 @@
 
 .navbar li a {
   color: #fefefe;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-decoration: none;
-  font-weight:  calc(var(--font-weight) + 300);
+  font-weight: calc(var(--font-weight) + 300);
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: rgba(0, 0, 0, 0.227);
 }
@@ -51,14 +51,14 @@
 .hover-underline-animation:after {
   content: "";
   position: absolute;
-  border: 1px solid #ffffff;
+  border: 1px solid var(--main-color);
   width: 100%;
   transform: scaleX(0);
   height: 2px;
   top: 25px;
   bottom: 0;
   left: 0;
-  background-color: #ffffff;
+  background-color: var(--main-color);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -66,7 +66,7 @@
 .underline-dark::after {
   content: "";
   position: absolute;
-  border: 1px solid var(--main-color) ;
+  border: 1px solid var(--main-color);
   width: 100%;
   transform: scaleX(0);
   height: 2px;
@@ -85,7 +85,7 @@
 
 .hamburger-react {
   display: none !important;
-  z-index: 5!important;
+  z-index: 5 !important;
 }
 
 .show-menu {
@@ -93,7 +93,6 @@
 }
 
 @media only screen and (max-width: 400px) {
-  
 }
 
 @media only screen and (max-width: 600px) {
@@ -108,6 +107,12 @@
     position: absolute;
     top: 16rem;
   } */
+}
+
+.roll-in-blurred-left {
+  -webkit-animation: roll-in-blurred-left 0.65s cubic-bezier(0.23, 1, 0.32, 1)
+    both;
+  animation: roll-in-blurred-left 0.65s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
 
 @media only screen and (max-width: 1180px) {
@@ -130,15 +135,53 @@
     padding: 1rem;
     min-height: 100%;
     animation-name: moveInLeftMenu;
-    animation-duration: 2s;
+    animation-duration: 0.5s;
     animation-timing-function: ease-out;
     backface-visibility: hidden;
   }
   .small-screen-dark {
-    background-color:  var(--main-color);
+    background-color: var(--main-color);
   }
   .navbar ul {
     margin: 0;
+  }
+  .navbar li a {
+    font-size: 2.5rem;
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    backface-visibility: hidden;
+    font-family: 'Amiri', serif;
+    font-weight: 400;
+    line-height: 70%;
+  }
+  .delay-1 {
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1.1s;
+    animation-timing-function: linear;
+  }
+  .delay-2 {
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1.2s;
+    animation-timing-function: linear;
+  }
+  .delay-3 {
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1.3s;
+    animation-timing-function: linear;
+  }
+  .delay-4 {
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1.4s;
+    animation-timing-function: linear;
+  }
+  .delay-5 {
+    animation-name: roll-in-blurred-left;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+  }
+  .small-pad {
+    margin: 3rem 0 0 0;
   }
 }
 
@@ -147,6 +190,37 @@
     opacity: 0;
   }
   100% {
+    opacity: 1;
+  }
+}
+
+/**
+ * ----------------------------------------
+ * animation roll-in-blurred-left
+ * ----------------------------------------
+ */
+@-webkit-keyframes roll-in-blurred-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes roll-in-blurred-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
   }
 }
