--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -45,7 +45,7 @@
 .hover-underline-animation {
   display: inline-block;
   position: relative;
-  color: #0087ca;
+  color: var(--main-blue);
 }
 
 .hover-underline-animation:after {
@@ -130,7 +130,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
-    background-color: #226092;
+    background-color: var(--main-blue);
     width: 100%;
     padding: 1rem;
     min-height: 100%;
@@ -140,7 +140,7 @@
     backface-visibility: hidden;
   }
   .small-screen-dark {
-    background-color: var(--main-color);
+    background-color: var(--main-blue);
   }
   .navbar ul {
     margin: 0;
@@ -151,9 +151,10 @@
     animation-duration: 1s;
     animation-timing-function: linear;
     backface-visibility: hidden;
-    font-family: 'Amiri', serif;
+    font-family: "Amiri", serif;
     font-weight: 400;
     line-height: 70%;
+    color: white;
   }
   .delay-1 {
     animation-name: roll-in-blurred-left;
