mobile bottom nav looking better

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@ h1, h2, h3, h4, h5, p {
   margin: 0;
 }
 
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
 :root {
   --main-color: #be9a60f8;
   --font-size: 1.3rem;
