--- a/src/components/client_reporting/ClientReporting.css
+++ b/src/components/client_reporting/ClientReporting.css
@@ -23,6 +23,9 @@
 
 
 @media only screen and (max-width: 600px) {
+  .client-container {
+    font-size:  calc(var(--font-size) * 0.8);
+  }
   .client-container img {
     left: -5rem;
   }
