--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -33,7 +33,7 @@
 
 #main-logo-img {
   cursor: pointer;
-  height: 5rem;
+  height: 7rem;
 }
 
 .logo-container {
@@ -96,9 +96,9 @@
 }
 
 @media only screen and (max-width: 600px) {
-  /* #main-logo-img {
-    height: 4rem;
-  } */
+  #main-logo-img {
+    height: 5rem;
+  }
   .navbar {
     flex-direction: row !important;
   }
