some css changes and white background fixed when loading on screen reload

--- a/src/components/client_reporting/ClientReporting.css
+++ b/src/components/client_reporting/ClientReporting.css
@@ -1,5 +1,5 @@
 .client-container {
-  font-size:  var(--font-size);
+  font-size:  calc(var(--font-size) * 1.2);
   display: flex;
   flex-direction: column;
   min-height: 80vh;
