--- a/src/components/bottom_nav/BottomNav.css
+++ b/src/components/bottom_nav/BottomNav.css
@@ -46,7 +46,7 @@
   font-size: var(--links-font-size);
   line-height: 1.5rem;
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-weight: var(--font-weight);
   color: #adadad;
   margin-bottom: 0.5rem;
   /* text-align: center; */
@@ -76,7 +76,7 @@
 
 .bottom-main-links li a {
   font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+  font-weight: var(--font-weight);
   font-size: 0.9rem;
   line-height: 1.425rem;
   display: block;
