--- a/src/components/job_opportunities/JobOpportunities.css
+++ b/src/components/job_opportunities/JobOpportunities.css
@@ -1,9 +1,14 @@
 .job-opp-container {
   min-height: 100vh;
   font-size: var(--font-size);
+  font-weight: 200;
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.job-opp-container h1 {
+  font-weight: 300;
 }
 
 .job-opp-container img {
