--- a/src/components/our_people/OurPeople.css
+++ b/src/components/our_people/OurPeople.css
@@ -16,6 +16,7 @@
   border-radius: 5px;
   /* backdrop-filter: blur(2px); */
   border: 1px solid #be9a60;
+  font-weight: 100;
 }
 
 .our-people-text p {
@@ -27,6 +28,7 @@
 
 .our-people-text h1 {
   font-family: 'Amiri', serif;
+  font-weight: 100;
 }
 
 #our-people-img {
